# omnishell

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: macos-debug.yml  release.yml
crates/anymap_compat/: Cargo.toml
crates/anymap_compat/src/: lib.rs
docs/: OmniShell Architecture Diagrams.md  OmniShell Product Requirements Document.md  configuration.md
docs/examples/: admin-anthropic.toml  agent-openai.toml  custom-provider.toml  kids-ollama.toml  multi-profile.json
src/: acl.rs  audit.rs  builtins.rs  cli.rs  completion.rs  config.rs  engram_backend.rs  error.rs  history.rs  lib.rs  llm_integration.rs  main.rs  output.rs  picker.rs  picture.rs  plugin.rs  profile.rs  profile_resolver.rs  sandbox.rs  shell_builder.rs  single_command.rs  snapshot.rs  theme.rs  undo.rs
src/lang/: functions.rs  lang_impl.rs  mod.rs  shell_mode.rs
tests/: bdd.rs  integration.rs  mock_llm.rs  sandbox.rs
