[package]
name = "omnishell"
version = "0.1.0"
edition = "2021"
authors = ["Vincent Palmer <shift@someone.section.me>"]
description = "An intelligent, ACL-fortified shell powered by shrs, llm, and gitoxide"
license = "AGPL-3.0-or-later"

[lib]
name = "omnishell"
path = "src/lib.rs"

[[bin]]
name = "omnishell"
path = "src/main.rs"

[dependencies]
# Shell framework
shrs = { version = "0.0.6", features = [] }
shrs_job = "0.0.6"
shrs_lang = "0.0.6"
shrs_utils = "0.0.6"
crossterm = "0.26"
lazy_static = "1.4"
regex = "1"

# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime (for LLM integration)
tokio = { version = "1", features = ["full"] }

# Terminal colouring
colored = "2.0"

# Gitoxide (pure Rust git, patched to vincents-ai fork)
gix = { version = "0.83", features = [
    "tree-editor",
    "status",
    "worktree-mutation",
    "dirwalk",
    "blob-diff",
] }

# LLM integration
vincents-llm = { git = "https://github.com/vincents-ai/llm.git", branch = "main" }

# Linux namespace sandboxing
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["process", "mount", "sched", "signal"] }
libc = "0.2"

# Terminal image rendering (profile pictures)
image = "0.25"
viuer = "0.9"

# Tracing / telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# XDG directories
dirs = "6"

# Glob pattern matching for ACL
glob = "0.3"

[workspace]
members = [".", "crates/anymap_compat"]

[patch.crates-io]
gix = { git = "https://github.com/vincents-ai/gitoxide" }
anymap = { path = "crates/anymap_compat" }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
cucumber = "0.21"
tokio = { version = "1", features = ["test-util", "rt-multi-thread", "macros"] }

[features]
default = []
# Enable sandbox namespace tests (Linux only)
sandbox-tests = []
